feat: custom config

--- a/.github/workflows/custom_config.yml
+++ b/.github/workflows/custom_config.yml
@@ -12,4 +12,4 @@ jobs:
       shield: '["corne_left nice_view_adapter nice_view", "corne_right nice_view_adapter nice_view"]'
       custom_config: '["#define MIRYOKU_KLUDGE_MOUSEKEYSPR", "#define MIRYOKU_CLIPBOARD=MAC"]'
       alphas: '["colemakdhk"]'
-      modules: '["a741725193/zmk-new_corne/main"]'
+      modules: '["zambo/zmk-corne/tree/start"]'
