--- a/.github/workflows/build-example-mousekeyspr.yml
+++ b/.github/workflows/build-example-mousekeyspr.yml
@@ -1,7 +1,7 @@
 # Copyright 2024 Manna Harbour
 # https://github.com/manna-harbour/miryoku
 
-name: 'Build Example mousekeyspr'
+name: "Build Example mousekeyspr"
 on: workflow_dispatch
 jobs:
   build:
@@ -9,7 +9,7 @@ jobs:
     secrets: inherit
     with:
       board: '["nice_nano"]'
-      shield: '["corne_left"]'
+      shield: '["corne_left","corne_right"]'
       custom_config: '["#define MIRYOKU_KLUDGE_MOUSEKEYSPR"]'
       kconfig: '["CONFIG_ZMK_MOUSE=y"]'
       branches: '["petejohanson/zmk/feat/pointers-move-scroll","zmkfirmware/zmk/main petejohanson/zmk/feat/pointers-move-scroll"]'
