--- a/.github/workflows/00_corne.yml
+++ b/.github/workflows/00_corne.yml
@@ -8,6 +8,4 @@ jobs:
     uses: ./.github/workflows/main.yml
     secrets: inherit
     with:
-      board: '["nice_nano"]'
-      shield: '["corne_left nice_view_adapter nice_view","corne_right nice_view_adapter nice_view"]'
-      custom_config: '["#define MIRYOKU_KLUDGE_MOUSEKEYSPR", "#define MIRYOKU_CLIPBOARD=MAC"]'
+      board: '["nice_nano_v2"]'
