--- a/.github/workflows/00_corne.yml
+++ b/.github/workflows/00_corne.yml
@@ -8,6 +8,6 @@ jobs:
     uses: ./.github/workflows/main.yml
     secrets: inherit
     with:
-      board: '["nice_nano_v2"]'
-      shield: '["corne_left nice_view_adapter nice_view","corne_right nice_view_adapter nice_view"]'
+      board: '["eyelash_corne_left", "eyelash_corne_right"]'
+      shield: '["nice_view"]'
       modules: '["zambo/zmk-corne/main/config"]'
