--- a/.github/workflows/00_corne.yml
+++ b/.github/workflows/00_corne.yml
@@ -9,7 +9,7 @@ jobs:
     secrets: inherit
     with:
       board: '["eyelash_corne_left", "eyelash_corne_right"]'
-      shield: '["nice_view"]'
+      shield: '["nice_view_2"]'
       modules: '["zambo/zmk-corne/main"]'
       clipboard: '["mac"]'
       alphas: '["default"]'
