--- a/.github/workflows/00_corne.yml
+++ b/.github/workflows/00_corne.yml
@@ -10,6 +10,6 @@ jobs:
     with:
       board: '["eyelash_corne_left", "eyelash_corne_right"]'
       shield: '["nice_view"]'
-      modules: '["zambo/zmk-corne/main"]'
+      modules: '["a741725193/zmk-new_corne/main"]'
       clipboard: '["mac"]'
       alphas: '["default"]'
