--- a/.github/workflows/00_corne.yml
+++ b/.github/workflows/00_corne.yml
@@ -8,7 +8,7 @@ jobs:
     uses: ./.github/workflows/main.yml
     secrets: inherit
     with:
-      board: '["eyelash_corne_left", "eyelash_corne_right"]'
+      board: '["eyelash_corne_left nice_view_adapter", "eyelash_corne_right nice_view_adapter"]'
       shield: '["nice_view"]'
       modules: '["a741725193/zmk-new_corne/main"]'
       clipboard: '["mac"]'
