--- a/.github/workflows/00_corne.yml
+++ b/.github/workflows/00_corne.yml
@@ -8,8 +8,8 @@ jobs:
     uses: ./.github/workflows/main.yml
     secrets: inherit
     with:
-      board: '["eyelash_corne_left nice_view_adapter nice_view", "eyelash_corne_right nice_view_adapter nice_view"]'
-      shield: '["nice_view"]'
+      board: '["eyelash_corne_left", "eyelash_corne_left studio-rpc-usb-uart", "eyelash_corne_left studio-rpc-usb-uart" "eyelash_corne_right"]'
+      shield: '["nice_view", "settings_reset"]'
       modules: '["a741725193/zmk-new_corne/main"]'
       clipboard: '["mac"]'
       alphas: '["default"]'
