--- a/.github/workflows/build-corne-eyelash-base.yml
+++ b/.github/workflows/build-corne-eyelash-base.yml
@@ -8,9 +8,9 @@ jobs:
     uses: ./.github/workflows/main.yml
     secrets: inherit
     with:
-      shield: '["nice_view nice_view_adapter"]'
+      shield: '["nice_view"]'
       board: '["eyelash_corne_left", "eyelash_corne_right"]'
       kconfig: '["CONFIG_ZMK_DISPLAY=y"]'
-      branches: '["a741725193/zmk-new_corne/main"]'
+      # branches: '["a741725193/zmk-new_corne/main"]'
       clipboard: '["mac"]'
       alphas: '["default"]'
