chore: testing build

--- a/.github/workflows/build-corne-eyelash-base.yml
+++ b/.github/workflows/build-corne-eyelash-base.yml
@@ -8,8 +8,9 @@ jobs:
     uses: ./.github/workflows/main.yml
     secrets: inherit
     with:
-      shield: '["eyelash_corne_left nice_view nice_view_adapter", "eyelash_corne_right nice_view nice_view_adapter"]'
-      board: '["nice_view"]'
+      shield: '["eyelash_corne_left, eyelash_corne_right"]'
+      board: '["eyelash_corne"]'
+      kconfig: '["CONFIG_ZMK_DISPLAY=y"]'
       modules: '["a741725193/zmk-new_corne/main"]'
       clipboard: '["mac"]'
       alphas: '["default"]'
