--- a/.github/workflows/build-corne-eyelash-base.yml
+++ b/.github/workflows/build-corne-eyelash-base.yml
@@ -8,8 +8,8 @@ jobs:
     uses: ./.github/workflows/main.yml
     secrets: inherit
     with:
-      shield: '["eyelash_corne_left, eyelash_corne_right"]'
-      board: '["eyelash_corne"]'
+      shield: '["nice_view"]'
+      board: '["eyelash_corne left", "eyelash_corne right"]'
       kconfig: '["CONFIG_ZMK_DISPLAY=y"]'
       modules: '["a741725193/zmk-new_corne/main"]'
       clipboard: '["mac"]'
