--- a/.github/workflows/build-corne-eyelash-base.yml
+++ b/.github/workflows/build-corne-eyelash-base.yml
@@ -8,9 +8,8 @@ jobs:
     uses: ./.github/workflows/main.yml
     secrets: inherit
     with:
+      board: '["eyelash_corne_left nice_nano", "eyelash_corne_right nice_nano"]'
       shield: '["nice_view"]'
-      board: '["eyelash_corne left", "eyelash_corne right"]'
-      kconfig: '["CONFIG_ZMK_DISPLAY=y"]'
       modules: '["a741725193/zmk-new_corne/main"]'
       clipboard: '["mac"]'
       alphas: '["default"]'
