--- a/.github/workflows/build-corne-eyelash-base.yml
+++ b/.github/workflows/build-corne-eyelash-base.yml
@@ -8,8 +8,8 @@ jobs:
     uses: ./.github/workflows/main.yml
     secrets: inherit
     with:
-      board: '["eyelash_corne_left nice_nano", "eyelash_corne_right nice_nano"]'
-      shield: '["nice_view"]'
       modules: '["a741725193/zmk-new_corne/main"]'
+      board: '["eyelash_corne_left", "eyelash_corne_left"]'
+      shield: '["nice_view"]'
       clipboard: '["mac"]'
       alphas: '["default"]'
