--- a/.github/workflows/build-corne-eyelash-base.yml
+++ b/.github/workflows/build-corne-eyelash-base.yml
@@ -8,7 +8,7 @@ jobs:
     uses: ./.github/workflows/main.yml
     secrets: inherit
     with:
-      board: '["eyelash_corne_left", "eyelash_corne_left"]'
+      board: '["eyelash_corne_left", "eyelash_corne_right"]'
       shield: '["nice_view"]'
       modules: '["a741725193/zmk-new_corne/main"]'
       clipboard: '["mac"]'
