--- a/.github/workflows/build-corne-eyelash-base.yml
+++ b/.github/workflows/build-corne-eyelash-base.yml
@@ -8,8 +8,8 @@ jobs:
     uses: ./.github/workflows/main.yml
     secrets: inherit
     with:
-      shield: '["nice_view"]'
-      board: '["eyelash_corne_left nice_view", "eyelash_corne_right nice_view"]'
+      shield: "nice_view"
+      board: '["eyelash_corne_left", "eyelash_corne_right"]'
       modules: '["a741725193/zmk-new_corne/main"]'
       clipboard: '["mac"]'
       alphas: '["default"]'
