feat: settings on build file

--- a/.github/workflows/build-corne-eyelash-base.yml
+++ b/.github/workflows/build-corne-eyelash-base.yml
@@ -10,6 +10,8 @@ jobs:
     with:
       shield: '["nice_view"]'
       board: '["eyelash_corne_left", "eyelash_corne_right"]'
-      modules: '["a741725193/zmk-new_corne/main"]'
       clipboard: '["mac"]'
       alphas: '["default"]'
+      custom_config: '["#define MIRYOKU_KLUDGE_MOUSEKEYSPR"]'
+      kconfig: '["MIRYOKU_KLUDGE_MOUSEKEYSPR=y\nMIRYOKU_CLIPBOARD_MAC=y\nCONFIG_ZMK_DISPLAY=y\nCONFIG_ZMK_SLEEP=y\nCONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000\nCONFIG_WS2812_STRIP=y\nCONFIG_ZMK_RGB_UNDERGLOW=y\nCONFIG_ZMK_RGB_UNDERGLOW_ON_START=0\nCONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y\nCONFIG_ZMK_RGB_UNDERGLOW_HUE_START=160\nCONFIG_ZMK_RGB_UNDERGLOW_EFF_START=3\nCONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y\nCONFIG_ZMK_BLE_PASSKEY_ENTRY=y\nCONFIG_EC11=y\nCONFIG_EC11_TRIGGER_GLOBAL_THREAD=y\nCONFIG_ZMK_MOUSE=y\nCONFIG_ZMK_BACKLIGHT=y\nCONFIG_ZMK_BACKLIGHT_BRT_START=100\nCONFIG_BT_CTLR_TX_PWR_PLUS_8=y\nCONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=y\nCONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=7\nCONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y\nCONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y\nCONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y"]'
+      modules: '["a741725193/zmk-new_corne/main"]'
