feat: testing configs

--- a/config/eyelash_corne.conf
+++ b/config/eyelash_corne.conf
@@ -15,7 +15,7 @@ CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
 CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=160
 CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=3
 
-nCONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY=y
 
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 CONFIG_ZMK_BLE_PASSKEY_ENTRY=y
