--- a/.github/workflows/build-example-eylash-corne-nice_view.yml
+++ b/.github/workflows/build-example-eylash-corne-nice_view.yml
@@ -1,7 +1,7 @@
 # Copyright 2022 Manna Harbour
 # https://github.com/manna-harbour/miryoku
 
-name: "Corne Eyelash"
+name: "Build Example eyelash_corne nice_view display mousekeyspr"
 on: workflow_dispatch
 jobs:
   build:
