--- a/.github/workflows/test-all-boards.yml
+++ b/.github/workflows/test-all-boards.yml
@@ -17,6 +17,7 @@ jobs:
         "corneish_zen_v1_left","corneish_zen_v1_right",
         "corneish_zen_v2_left","corneish_zen_v2_right",
         "dao_left","dao_right",
+        "eyelash_corne_left","eyelash_corne_right",
         "ferris_rev02",
         "ffkb-holyiot",
         "glove80_lh","glove80_rh",
