--- a/miryoku/miryoku.dtsi
+++ b/miryoku/miryoku.dtsi
@@ -4,8 +4,8 @@
 #include <behaviors.dtsi>
 #include <behaviors/mouse_key_press.dtsi>
 #if defined (MIRYOKU_KLUDGE_MOUSEKEYSPR)
-  #include <behaviors/mouse_move.dtsi>
-  #include <behaviors/mouse_scroll.dtsi>
+#include <behaviors/mouse_move.dtsi>
+#include <behaviors/mouse_scroll.dtsi>
 #endif
 #include <dt-bindings/zmk/keys.h>
 #include <dt-bindings/zmk/bt.h>
@@ -18,16 +18,18 @@
 #include <dt-bindings/zmk/mouse.h>
 
 / {
-  keymap {
-    compatible = "zmk,keymap";
-#define MIRYOKU_X(LAYER, STRING) \
-    LAYER { \
-      display-name = STRING; \
-      bindings = < U_MACRO_VA_ARGS(MIRYOKU_LAYERMAPPING_##LAYER, MIRYOKU_LAYER_##LAYER) >; \
-    };
-MIRYOKU_LAYER_LIST
-#undef MIRYOKU_X
-  };
+	keymap {
+		compatible = "zmk,keymap";
+		#define MIRYOKU_X(LAYER, STRING, EXTRA) \
+		LAYER { \
+			display-name = STRING; \
+			bindings = < U_MACRO_VA_ARGS(MIRYOKU_LAYERMAPPING_##LAYER, MIRYOKU_LAYER_##LAYER) >; \
+			EXTRA \
+			
+		};
+		MIRYOKU_LAYER_LIST
+		#undef MIRYOKU_X
+	};
 };
 
 #include "miryoku_shift_functions.dtsi"
@@ -35,25 +37,25 @@ MIRYOKU_LAYER_LIST
 #include "miryoku_double_tap_guard.dtsi"
 
 #if defined (MIRYOKU_KLUDGE_MOUSEKEYSPR)
-  #include "miryoku_kludge_mousekeyspr.dtsi"
+#include "miryoku_kludge_mousekeyspr.dtsi"
 #else
-  #include "miryoku_mousekeys.dtsi"
+#include "miryoku_mousekeys.dtsi"
 #endif
 
 #if defined (MIRYOKU_KLUDGE_THUMBCOMBOS)
-  #include "miryoku_kludge_thumbcombos.dtsi"
+#include "miryoku_kludge_thumbcombos.dtsi"
 #endif
 
 #if defined (MIRYOKU_KLUDGE_TOPROWCOMBOS)
-  #include "miryoku_kludge_toprowcombos.dtsi"
+#include "miryoku_kludge_toprowcombos.dtsi"
 #endif
 
 #if defined (MIRYOKU_KLUDGE_BOTTOMROWCOMBOS)
-  #include "miryoku_kludge_bottomrowcombos.dtsi"
+#include "miryoku_kludge_bottomrowcombos.dtsi"
 #endif
 
 #if defined (MIRYOKU_KLUDGE_TAPDELAY)
-  #include "miryoku_kludge_tapdelay.dtsi"
+#include "miryoku_kludge_tapdelay.dtsi"
 #else
-  #include "miryoku_behaviors.dtsi"
+#include "miryoku_behaviors.dtsi"
 #endif
