--- a/miryoku/miryoku.dtsi
+++ b/miryoku/miryoku.dtsi
@@ -17,7 +17,36 @@
 
 #include <dt-bindings/zmk/mouse.h>
 
+
+
 / {
+	rgb_encoder: rgb_encoder {
+		compatible = "zmk,behavior-sensor-rotate";
+		#sensor-binding-cells = <0>;
+		bindings = <&rgb_ug RGB_BRI>, <&rgb_ug RGB_BRD>;
+	};
+	
+	scroll_encoder: scroll_encoder {
+		compatible = "zmk,behavior-sensor-rotate";
+		#sensor-binding-cells = <0>;
+		bindings = <&msc SCRL_DOWN>, <&msc SCRL_UP>;
+		tap-ms = <30>;
+	};
+	
+	undo_redo_encoder: undo_redo_encoder {
+		compatible = "zmk,behavior-sensor-rotate";
+		#sensor-binding-cells = <0>;
+		bindings = <&inc_dec_kp U_UND U_RDO>; \
+		tap-ms = <30>;
+	};
+	
+	left_right_encoder: undo_redo_encoder {
+		compatible = "zmk,behavior-sensor-rotate";
+		#sensor-binding-cells = <0>;
+		bindings = <&inc_dec_kp LEFT RIGHT>; \
+		tap-ms = <30>;
+	};
+	
 	keymap {
 		compatible = "zmk,keymap";
 		#define MIRYOKU_X(LAYER, STRING, EXTRA) \
