--- a/miryoku/miryoku.dtsi
+++ b/miryoku/miryoku.dtsi
@@ -40,7 +40,7 @@
 		tap-ms = <30>;
 	};
 	
-	left_right_encoder: undo_redo_encoder {
+	left_right_encoder: left_right_encoder {
 		compatible = "zmk,behavior-sensor-rotate";
 		#sensor-binding-cells = <0>;
 		bindings = <&inc_dec_kp LEFT RIGHT>; \
