--- a/miryoku/miryoku.dtsi
+++ b/miryoku/miryoku.dtsi
@@ -40,6 +40,13 @@
 		tap-ms = <30>;
 	};
 	
+	volume_encoder: volume_encoder {
+		compatible = "zmk,behavior-sensor-rotate";
+		#sensor-binding-cells = <0>;
+		bindings = <&inc_dec_kp CVD CVU>; \
+		tap-ms = <30>;
+	};
+	
 	left_right_encoder: left_right_encoder {
 		compatible = "zmk,behavior-sensor-rotate";
 		#sensor-binding-cells = <0>;
