--- a/miryoku/miryoku.dtsi
+++ b/miryoku/miryoku.dtsi
@@ -43,7 +43,7 @@
 	volume_encoder: volume_encoder {
 		compatible = "zmk,behavior-sensor-rotate";
 		#sensor-binding-cells = <0>;
-		bindings = <&inc_dec_kp CVD CVU>; \
+		bindings = <&inc_dec_kp C_VOLUME_DOWN C_VOL_UP>; \
 		tap-ms = <30>;
 	};
 	
