feat: experimenting with custom settings/keymaps

--- a/miryoku/miryoku.dtsi
+++ b/miryoku/miryoku.dtsi
@@ -20,7 +20,25 @@
 
 
 
+
 / {
+	
+&mmv_input_listener { input-processors = <&zip_xy_scaler 2 1>; };
+	
+&msc_input_listener { input-processors = <&zip_scroll_scaler 2 1>; };
+	
+	&msc {
+		acceleration-exponent = <1>;
+		time-to-max-speed-ms = <100>;
+		delay-ms = <0>;
+	};
+	
+	&mmv {
+		time-to-max-speed-ms = <500>;
+		acceleration-exponent = <1>;
+		trigger-period-ms = <16>;
+	};
+	
 	rgb_encoder: rgb_encoder {
 		compatible = "zmk,behavior-sensor-rotate";
 		#sensor-binding-cells = <0>;
