--- a/miryoku/miryoku.dtsi
+++ b/miryoku/miryoku.dtsi
@@ -13,6 +13,7 @@
 #include <dt-bindings/zmk/rgb.h>
 #include <dt-bindings/zmk/outputs.h>
 #include <dt-bindings/zmk/ext_power.h>
+#include <input/processors.dtsi>
 
 #include "miryoku.h"
 
