--- a/miryoku/miryoku.dtsi
+++ b/miryoku/miryoku.dtsi
@@ -9,6 +9,7 @@
 #include <dt-bindings/zmk/rgb.h>
 #include <dt-bindings/zmk/outputs.h>
 #include <dt-bindings/zmk/ext_power.h>
+#include <zephyr/dt-bindings/input/input-event-codes.h>
 #include <input/processors.dtsi>
 
 #include "miryoku.h"
