--- a/miryoku/miryoku.dtsi
+++ b/miryoku/miryoku.dtsi
@@ -9,11 +9,10 @@
 #include <dt-bindings/zmk/rgb.h>
 #include <dt-bindings/zmk/outputs.h>
 #include <dt-bindings/zmk/ext_power.h>
-#include <zephyr/dt-bindings/input/input-event-codes.h>
 #include <input/processors.dtsi>
+#include <zephyr/dt-bindings/input/input-event-codes.h>
 
 #include "miryoku.h"
-
 
 &mmv_input_listener { input-processors = <&zip_xy_scaler 2 1>; };
 
@@ -49,7 +48,7 @@
 	undo_redo_encoder: undo_redo_encoder {
 		compatible = "zmk,behavior-sensor-rotate";
 		#sensor-binding-cells = <0>;
-		bindings = <&inc_dec_kp U_UND U_RDO>; \
+		bindings = <&inc_dec_kp K_UNDO K_AGAIN>; \
 		tap-ms = <30>;
 	};
 
