--- a/miryoku/miryoku.dtsi
+++ b/miryoku/miryoku.dtsi
@@ -59,7 +59,7 @@
 	left_right_encoder: left_right_encoder {
 		compatible = "zmk,behavior-sensor-rotate";
 		#sensor-binding-cells = <0>;
-		bindings = <&inc_dec_kp LEFT RIGHT>; \
+		bindings = <&kp LEFT>, <&kp RIGHT>; \
 	};
 
 	keymap {
