--- a/miryoku/miryoku.dtsi
+++ b/miryoku/miryoku.dtsi
@@ -41,25 +41,31 @@
 	scroll_encoder: scroll_encoder {
 		compatible = "zmk,behavior-sensor-rotate"; \
 		#sensor-binding-cells = <0>; \
-		bindings = <&msc SCRL_DOWN>, <&msc SCRL_UP>; \
+		bindings = <&msc SCRL_UP>, <&msc SCRL_DOWN>; \
 	};
 
 	undo_redo_encoder: undo_redo_encoder {
 		compatible = "zmk,behavior-sensor-rotate"; \
 		#sensor-binding-cells = <0>; \
-		bindings = <&kp K_UNDO>, <&kp K_AGAIN>; \
+		bindings = <&kp K_AGAIN>, <&kp K_UNDO>; \
 	};
 
 	volume_encoder: volume_encoder {
 		compatible = "zmk,behavior-sensor-rotate"; \
 		#sensor-binding-cells = <0>; \
-		bindings = <&kp C_VOLUME_DOWN>, <&kp C_VOL_UP>; \
+		bindings = <&kp C_VOL_UP>, <&kp C_VOLUME_DOWN>; \
 	};
 
 	left_right_encoder: left_right_encoder {
 		compatible = "zmk,behavior-sensor-rotate";
 		#sensor-binding-cells = <0>;
-		bindings = <&kp LEFT>, <&kp RIGHT>; \
+		bindings = <&kp RIGHT>, <&kp LEFT>; \
+	};
+
+	up_down_encoder: up_down_encoder {
+		compatible = "zmk,behavior-sensor-rotate";
+		#sensor-binding-cells = <0>;
+		bindings = <&kp UP>, <&kp DOWN>; \
 	};
 
 	keymap {
